--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 <a href="#">Home</a>
                 <a href="#">Support</a>
             </nav>
-            <button class="logout-btn">Logout</button>
+            <form action="login.html" method="post">
+                <button class="logout-btn">Logout</button>
+            </form>
         </div>
     </header>
 
